# ifsc-climbing-dataviz-claude

./: .env.example  .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
assets/: api_request_tester.py
assets/api-data-structures/: category_rounds-id-results.json  routes-id-results.json  season_leagues-id.json
assets/databases/: ifsc-data-content-model.mwb  ifsc-data-struct-model.mwb  ifsc-data-struct.sqlite
assets/helpers/: data_fetcher.py  event_location.py
data-fetch/: data_content_fetcher.py  data_struct_fetcher.py
docs/: README.md  contributing.md
docs/architecture/: api-client.md  database-and-schema.md  ingestion-pipeline.md  layer-0-surface.md  overview.md  parsing-and-heuristics.md
docs/cli-cookbook/: README.md  custom-queries.md  daily-use.md  exit-codes.md  exports.md  setup.md  troubleshooting.md
docs/data-dictionary/: README.md  ascents.md  athletes.md  category-rounds.md  competitions.md  cup-rankings.md  events.md  reference-tables.md  results.md  round-results.md  round-stages.md  routes.md  season-leagues.md  seasons.md  stage-results.md
docs/decisions/: 0001-single-sqlite-warehouse.md  0002-streaming-writes.md  0003-selective-4xx-skip-retry.md  0004-incremental-hydration-with-staleness.md  0005-transactional-boundary-on-competitions.md  0006-ongoing-only-pull-new.md  0007-per-round-ingestion.md  0008-country-iso3-sibling-column.md  0009-athletes-payload-expansion.md  0010-operational-silence-guardrails.md  0011-schema-hardening-and-versioned-migrations.md  README.md
docs/operations/: README.md  auth.md  backup.md  logs.md  recovery.md
docs/python-api/: README.md  client.md  fetchers-and-orchestrator.md  repository.md
notebooks/: 00_setup_and_first_crawl.ipynb  01_the_data_model.ipynb  02_the_python_api.ipynb  03_querying_and_exporting.ipynb  README.md
src/ifsc_data/: __init__.py  __main__.py  cli.py  config.py  exporter.py  logging_setup.py
src/wcl_data/: __init__.py  cli.py  (+4 more)
tests/: conftest.py  test_api_client.py  test_cli.py  test_config.py  test_credentials.py  test_db_fk_violations.py  test_db_repository.py  test_db_schema.py  test_event_location.py  test_exporter.py
(+41 files in other folders)
