[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifsc-data"
version = "0.1.0"
description = "Layer 0: ingest the IFSC public API into a local SQLite warehouse."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pycountry>=23.12",
    "python-dotenv>=1.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
notebook = [
    "jupyterlab>=4.0",
    "pandas>=2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
ifsc-data = "ifsc_data.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
