[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wcl-data"
version = "0.1.0"
description = "World Climbing Lab — a personal climbing-competition analytics project. This package (wcl-data) is the ingestion layer: it pulls the public competition API (ifsc.results.info) into a local SQLite warehouse for downstream analytics and ML."
keywords = ["climbing", "sport-climbing", "ifsc", "world-climbing", "competition-data", "data-ingestion", "sqlite"]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pycountry>=23.12",
    "python-dotenv>=1.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "freezegun>=1.5",
]
notebook = [
    "jupyterlab>=4.0",
    "pandas>=2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/SupaGuta/world-climbing-lab"
Documentation = "https://supaguta.github.io/world-climbing-lab/"
Repository = "https://github.com/SupaGuta/world-climbing-lab"
Issues = "https://github.com/SupaGuta/world-climbing-lab/issues"

[project.scripts]
wcl-data = "wcl_data.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
